<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.VendaListaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp"
            android:layout_weight="0.3"
            android:text="@string/selecione_o_pedido" />

        <Spinner
            android:id="@+id/sp_pedido_venda"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp"
            android:layout_weight="0.7" />

        <Switch
            android:id="@+id/sw_pedido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="0.1"
            android:checked="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="65dp"
            android:layout_marginRight="16dp"
            android:layout_weight="0.3"
            android:text="@string/selecione_o_cliente" />

        <Spinner
            android:id="@+id/sp_cliente_venda"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="65dp"
            android:layout_marginRight="16dp"
            android:layout_weight="0.7" />

        <Switch
            android:id="@+id/sw_cliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:layout_weight="0.1"
            android:checked="true" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_pesquisar_vendas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="125dp"
        android:layout_marginRight="16dp"
        android:text="@string/pesquisar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="185dp"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="240dp"
            android:scrollbars="none">

            <TableLayout
                android:id="@+id/tl_vendas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*">

            </TableLayout>
        </ScrollView>

        <TextView
            android:id="@+id/tv_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="10dp"
            android:textAlignment="textEnd" />

        <Button
            android:id="@+id/bt_baixar_vendas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/baixar_vendas" />

    </LinearLayout>

</FrameLayout>